--- a/index.html
+++ b/index.html
@@ -6,8 +6,79 @@
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
 
+<h1>VORANOUTH</h1>
+
+<header class="_main-heading">
+  <nav class ="nav">
+    <ul>
+      <li class="nav--item"><a class="nav--link" href="#">Visual design</a></li>
+      <li class="nav--item"><a class="nav--link" href="#">Illustration</a></li>
+      <li class="nav--item"><a class="nav--link" href="#">Hand Lettering</a></li>
+      <li class="nav--item"><a class="nav--link" href="#">Letterpress</a></li>
+    </ul>
+  </nav>
+</header>
+
+<div class="_video">
+<p>
+Enjoy this hilarious cover of One Direction's "Story of My Life" + lyrics below for you to follow along and karaoke if you want.</p>
+
+<h2>"Story of my Life"</h2>
+<p>
+Written in these walls are the stories that I can't explain
+I leave my heart open but it stays right here empty for days
+She told me in the morning she don't feel the same about us in her bones
+Seems to me that when I die these words will be written on my stone</p>
+
+<p>And I'll be gone, gone tonight
+The ground beneath my feet is open wide
+The way that I been holding on too tight
+With nothing in between</p>
+
+<p>[CHORUS]</p>
+<p>The story of my life
+I take her home
+I drive all night
+To keep her warm
+And time is frozen (the story of, the story of)
+The story of my life
+I give her hope
+I spend her love
+Until she's broke
+Inside
+The story of my life (the story of, the story of)</p>
+
+<p>Written on these walls are the colors that I can't change
+Leave my heart open but it stays right here in its cage
+I know that in the morning now I see us in the light upon a hill
+Although I am broken, my heart is untamed, still</p>
+
+<p>And I'll be gone, gone tonight
+The fire beneath my feet is burning bright
+The way that I been holding on so tight
+With nothing in between</p>
+
+<p>[CHORUS]</p>
+
+<p>And I been waiting for this time to come around
+But baby running after you is like chasing the clouds</p>
+
+<p>[CHORUS]</p>
+
+<p>The story of my life
+The story of my life (the story of, the story of)
+The story of my life
+</p>
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jD6rKhzV_m0" frameborder="0" allowfullscreen></iframe>
+<br><br>
+<iframe src="//giphy.com/embed/1bffEtmXGc8Ny?html5=true" width="480" height="424" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+
+
+</div>
   <script src="js/app.js"></script>
 </body>
 </html>
